fix: The header now has larger padding to make sure it aligns neatly with the menu items in mobile view

--- a/packages/css/src/header.css
+++ b/packages/css/src/header.css
@@ -6,7 +6,7 @@
   align-items: center;
   width: 100%;
   container-type: inline-size;
-  padding: var(--ds-size-2) var(--ds-size-4);
+  padding: var(--ds-size-2) var(--ds-size-6);
 
   & .ds-search {
     align-self: self-start;
